syntax = "proto3";
package TEngine.Network.Message;

import "CommonData.proto";

//获取背包信息
message C2L_BagInfo // IRequest,L2C_BagInfo
{
	
}

message L2C_BagInfo // IResponse
{
	repeated Slot slot		 		= 1;//格子
}

//背包更新
message L2C_BagUpdate // IMessage
{
	int32  UpdateType   			= 1;//更新类型,0:添加,1:删除,2:变更,3:有删有减,双执行
	repeated Slot info 				= 2;//格子信息，count=0则删除
}

//装备穿戴
message C2L_EquipWear // IRequest,L2C_EquipWear
{
	bool OnWear						= 1;//穿戴或者卸载
	int64 idx						= 2;//格子索引
	int32 WearIdx					= 3;//装备位置
}

message L2C_EquipWear // IResponse
{

}





